# lethe

./: Cargo.toml  LICENSE
src/: alloc.rs  datastore.rs  error.rs  io.rs  lib.rs
src/io/: blockcrypt.rs  crypt.rs  mod.rs  recrypt.rs
