[package]
name = "lethe"
version = "0.1.0"
edition = "2021"

[dependencies]
crypter = { git = "https://github.com/lemosyne/crypter.git" }
embedded-io = "0.4.0"
hasher = { git = "https://github.com/lemosyne/hasher.git" }
khf = { git = "https://github.com/lemosyne/khf.git" }
kms = { git = "https://github.com/lemosyne/kms.git" }
inachus = { git = "ssh://git@github.com/lemosyne/inachus.git" }
path_macro = "1.0.0"
rand = "0.8.5"
thiserror = "1.0.40"

[dev-dependencies]
anyhow = "1.0.71"
crypter = { git = "https://github.com/lemosyne/crypter.git", features = ["openssl"] }
hasher = { git = "https://github.com/lemosyne/hasher.git", features = ["openssl"] }
hex = "0.4.3"
