[package]
name = "lethe"
version = "0.1.0"
edition = "2021"

[dependencies]
crypter = { git = "https://github.com/lemosyne/crypter.git" }
embedded-io = { git = "https://github.com/euugenechou/embedded-io.git" }
hasher = { git = "https://github.com/lemosyne/hasher.git" }
hex = "0.4.3"
khf = { path = "../khf" }
kms = { git = "https://github.com/lemosyne/kms.git", features = ["persistence"] }
inachus = { git = "ssh://git@github.com/lemosyne/inachus.git" }
rand = "0.8.5"
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
anyhow = "1.0.71"
crypter = { git = "https://github.com/lemosyne/crypter.git", features = ["openssl"] }
embedded-io = { git = "https://github.com/euugenechou/embedded-io.git", features = ["std"] }
hasher = { git = "https://github.com/lemosyne/hasher.git", features = ["openssl"] }
path_macro = "1.0.0"
tempfile = "3.5.0"
